[gd_scene load_steps=4 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float timer_value = 1.;

vec3 rainbow(float level)
{
	
	float r = float(level <= 2.0) + float(level > 4.0) * 0.5;
	float g = max(1.0 - abs(level - 2.0) * 0.5, 0.0);
	float b = (1.0 - (level - 4.0) * 0.5) * float(level >= 4.0);
	return vec3(r, g, b);
}

vec3 smoothRainbow (float x)
{
    float level1 = floor(x*6.0);
    float level2 = min(6.0, floor(x*6.0) + 1.0);
    
    vec3 a = rainbow(level1);
    vec3 b = rainbow(level2);
    
    return mix(a, b, fract(x*6.0));
}

void fragment(){
	
	float alpha_value;
	alpha_value = step(mod(TIME, timer_value), UV.x);
	vec3 color = smoothRainbow(floor(UV.x));
	COLOR = vec4(color, alpha_value);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/timer_value = 1.0

[node name="game" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1093.0
margin_bottom = 661.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="."]

[node name="timeLeft" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 270.0
margin_top = 17.0
margin_right = 788.0
margin_bottom = 103.0
color = Color( 0.133333, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
